下拉選單置中

--- a/layout/header.html
+++ b/layout/header.html
@@ -13,77 +13,7 @@
         <span></span>
       </div>
       <div id="sidr">
-        <!-- <button id="close-sidr" style="float: right; margin: 10px;">✕</button> -->
-        <!-- <h2>側邊欄</h2> -->
-        <ul class="navBar_list">
-          <li class="nav-item">
-            <a class="nav-link no_link" href="https://www.datesummit.com/"  role="button">
-              DATE<i class="bi bi-caret-down"></i></i>
-            </a>
-            <ul class="down_menu">
-              <li><a class="dropdown-item" href="https://www.datesummit.com/" target="_blank">DATE官網</a></li>
-              <li><a class="dropdown-item" href="https://www.accupass.com/event/2407100 629363613327320">立刻報名</a>
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">
-              關於我們
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link no_link" href="#" role="button">
-              知識補給<i class="bi bi-caret-down"></i></i>
-            </a>
-            <ul class="down_menu">
-              <li><a class="dropdown-item" href="news.html">新知脈動</a></li>
-              <li><a class="dropdown-item" href="information.html">商情資訊</a></li>
-              <li><a class="dropdown-item" href="case.html">成功案例</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link no_link" href="#">
-              數位學習<i class="bi bi-caret-down"></i></i>
-            </a>
-            <ul class="down_menu">
-              <li><a class="dropdown-item" href="http://elearning.taiwantrade.com" target="_blank">數位貿易學苑</a></li>
-              <li><a class="dropdown-item"
-                  href="https://info.taiwantrade.com/promotion/e vent#menu=11608#menu=11608"
-                  target="_blank">電商研討會</a></li>
-              <li><a class="dropdown-item" href="https://events.taiwantrade.com/" target="_blank">活動資訊</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link no_link" href="#">
-              電商輔導<i class="bi bi-caret-down"></i></i>
-            </a>
-            <ul class="down_menu">
-              <li><a class="dropdown-item" href="https://info.taiwantrade.com/index/ecplatf orm#menu=11612"
-                  target="_blank">跨境電商上架</a></li>
-              <li><a class="dropdown-item" href="https://digitalcommerce.taiwantrade.com/ ai.html"
-                  target="_blank">中小企業專案</a></li>
-              <li><a class="dropdown-item" href="https://events.taiwantrade.com/checkup" target="_blank">數位行銷健檢</a>
-              </li>
-              <li><a class="dropdown-item" href="">說明暨洽談會</a></li>
-              <li><a class="dropdown-item" href="https://info.taiwantrade.com/index/service _special#wa2"
-                  target="_blank">商品認證檢測</a></li>
-              <li><a class="dropdown-item" href="https://info.taiwantrade.com/memberinde x/ttcampus"
-                  target="_blank">電商實戰營</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link no_link" href="#">
-              影音專區<i class="bi bi-caret-down"></i></i>
-            </a>
-            <ul class="down_menu">
-              <li><a class="dropdown-item" href="https://info.taiwantrade.com/video/#menu =11610"
-                  target="_blank">影音最前線</a></li>
-              <li><a class="dropdown-item" href="youtube.html" target="_blank">Youtube</a>
-              </li>
-            </ul>
-          </li>
-
-        </ul>
+        <ul class="navBar_list"><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">DATE <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="https://www.accupass.com/event/2407100629363613327320" target="_blank" rel="noopener noreferrer">立刻報名</a></li><li><a class="dropdown-item" href="https://www.datesummit.com/" target="_blank" rel="noopener noreferrer">DATE官網</a></li></ul></li><li class="nav-item"><a class="nav-link " href="/about" role="button" target="_self">關於我們 </a></li><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">知識補給 <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="/popularNews" target="_self" rel="noopener noreferrer">新知脈動</a></li><li><a class="dropdown-item" href="/information" target="_self" rel="noopener noreferrer">商情資訊</a></li><li><a class="dropdown-item" href="/case" target="_self" rel="noopener noreferrer">成功案例</a></li></ul></li><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">數位學習 <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="https://elearning.taiwantrade.com/" target="_blank" rel="noopener noreferrer">數位貿易學苑</a></li><li><a class="dropdown-item" href="https://info.taiwantrade.com/promotion/event#menu=11608" target="_blank" rel="noopener noreferrer">電商研討會</a></li><li><a class="dropdown-item" href="https://events.taiwantrade.com/" target="_blank" rel="noopener noreferrer">活動資訊</a></li></ul></li><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">電商輔導 <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="https://info.taiwantrade.com/index/ecplatform#menu=11612" target="_blank" rel="noopener noreferrer">跨境電商上架</a></li><li><a class="dropdown-item" href="https://digitalcommerce.taiwantrade.com/ai.html" target="_blank" rel="noopener noreferrer">中小企業專案</a></li><li><a class="dropdown-item" href="https://events.taiwantrade.com/checkup" target="_blank" rel="noopener noreferrer">數位行銷健檢</a></li><li><a class="dropdown-item" href="https://events.taiwantrade.com/2024DATEMeeting" target="_blank" rel="noopener noreferrer">說明暨洽談會</a></li><li><a class="dropdown-item" href="https://info.taiwantrade.com/index/service_special#wa2" target="_blank" rel="noopener noreferrer">商品認證檢測</a></li><li><a class="dropdown-item" href="https://info.taiwantrade.com/memberindex/ttcampus" target="_blank" rel="noopener noreferrer">電商實戰營</a></li></ul></li><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">影音專區 <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="https://info.taiwantrade.com/video/#menu=11610" target="_blank" rel="noopener noreferrer">影音最前線</a></li><li><a class="dropdown-item" href="https://www.youtube.com/taiwantrade" target="_blank" rel="noopener noreferrer">Youtube</a></li></ul></li><li class="nav-item"><a class="nav-link " href="https://www.taiwantrade.com/pages/2024intha.html" role="button" target="_blank">2024泰國臺灣形象展 </a></li></ul>
       </div>
     </div>
     <!-- 搜尋 -->
