--- a/layout/header.html
+++ b/layout/header.html
@@ -1,73 +1,147 @@
  
 <div class="navBar navbar-expand-lg">
-     <!-- logo -->
-     <div class="logo order-2 order-lg-1"><a class="navbar-brand" href="index.html"><img src="./assets/img/logo-color.f50f778.svg" alt=""> </a>
-      <a class="navbar-brand" href="https://info.taiwantrade.com/"><img src="./assets/img/logo-tt.0945799.svg"
-          alt=""></a>
-    </div>
-    <!-- 主選單 -->
-    <div class="mainNav order-1 order-lg-2">
-      <div id="menu-toggle" class="menu-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div id="sidr">
-        <ul class="navBar_list"><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">DATE <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="https://www.accupass.com/event/2407100629363613327320" target="_blank" rel="noopener noreferrer">立刻報名</a></li><li><a class="dropdown-item" href="https://www.datesummit.com/" target="_blank" rel="noopener noreferrer">DATE官網</a></li></ul></li><li class="nav-item"><a class="nav-link " href="/about" role="button" target="_self">關於我們 </a></li><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">知識補給 <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="/popularNews" target="_self" rel="noopener noreferrer">新知脈動</a></li><li><a class="dropdown-item" href="/information" target="_self" rel="noopener noreferrer">商情資訊</a></li><li><a class="dropdown-item" href="/case" target="_self" rel="noopener noreferrer">成功案例</a></li></ul></li><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">數位學習 <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="https://elearning.taiwantrade.com/" target="_blank" rel="noopener noreferrer">數位貿易學苑</a></li><li><a class="dropdown-item" href="https://info.taiwantrade.com/promotion/event#menu=11608" target="_blank" rel="noopener noreferrer">電商研討會</a></li><li><a class="dropdown-item" href="https://events.taiwantrade.com/" target="_blank" rel="noopener noreferrer">活動資訊</a></li></ul></li><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">電商輔導 <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="https://info.taiwantrade.com/index/ecplatform#menu=11612" target="_blank" rel="noopener noreferrer">跨境電商上架</a></li><li><a class="dropdown-item" href="https://digitalcommerce.taiwantrade.com/ai.html" target="_blank" rel="noopener noreferrer">中小企業專案</a></li><li><a class="dropdown-item" href="https://events.taiwantrade.com/checkup" target="_blank" rel="noopener noreferrer">數位行銷健檢</a></li><li><a class="dropdown-item" href="https://events.taiwantrade.com/2024DATEMeeting" target="_blank" rel="noopener noreferrer">說明暨洽談會</a></li><li><a class="dropdown-item" href="https://info.taiwantrade.com/index/service_special#wa2" target="_blank" rel="noopener noreferrer">商品認證檢測</a></li><li><a class="dropdown-item" href="https://info.taiwantrade.com/memberindex/ttcampus" target="_blank" rel="noopener noreferrer">電商實戰營</a></li></ul></li><li class="nav-item"><a class="nav-link no_link" href="#" role="button" target="_blank">影音專區 <i class="bi bi-caret-down"></i></a><ul class="down_menu"><li><a class="dropdown-item" href="https://info.taiwantrade.com/video/#menu=11610" target="_blank" rel="noopener noreferrer">影音最前線</a></li><li><a class="dropdown-item" href="https://www.youtube.com/taiwantrade" target="_blank" rel="noopener noreferrer">Youtube</a></li></ul></li><li class="nav-item"><a class="nav-link " href="https://www.taiwantrade.com/pages/2024intha.html" role="button" target="_blank">2024泰國臺灣形象展 </a></li></ul>
-      </div>
-    </div>
-    <!-- 搜尋 -->
-    <button class="btn order-3 order-lg-3 topSearchBTN" type="button" data-bs-toggle="offcanvas" data-bs-target="#searchTop"
-        aria-controls="offcanvasTop"><i class="bi bi-search"></i>
-      </button>
+  <!-- logo -->
+  <div class="logo order-2 order-lg-1"><a class="navbar-brand" href="index.html"><img src="./assets/img/logo-color.f50f778.svg" alt=""> </a>
+   <a class="navbar-brand" href="https://info.taiwantrade.com/"><img src="./assets/img/logo-tt.0945799.svg"
+       alt=""></a>
+ </div>
+ <!-- 主選單 -->
+ <div class="mainNav order-1 order-lg-2">
+   <div id="menu-toggle" class="menu-icon">
+     <span></span>
+     <span></span>
+     <span></span>
+   </div>
+   <div id="sidr">
+     <!-- <button id="close-sidr" style="float: right; margin: 10px;">✕</button> -->
+     <!-- <h2>側邊欄</h2> -->
+     <ul class="navBar_list">
+       <li class="nav-item">
+         <a class="nav-link no_link" href="https://www.datesummit.com/"  role="button">
+           DATE<i class="bi bi-caret-down"></i></i>
+         </a>
+         <ul class="down_menu">
+           <li><a class="dropdown-item" href="https://www.datesummit.com/" target="_blank">DATE官網</a></li>
+           <li><a class="dropdown-item" href="https://www.accupass.com/event/2407100 629363613327320">立刻報名</a>
+           </li>
+         </ul>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="about.html">
+           關於我們
+         </a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link no_link" href="#" role="button">
+           知識補給<i class="bi bi-caret-down"></i></i>
+         </a>
+         <ul class="down_menu">
+           <li><a class="dropdown-item" href="news.html">新知脈動</a></li>
+           <li><a class="dropdown-item" href="information.html">商情資訊</a></li>
+           <li><a class="dropdown-item" href="case.html">成功案例</a></li>
+         </ul>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link no_link" href="#">
+           數位學習<i class="bi bi-caret-down"></i></i>
+         </a>
+         <ul class="down_menu">
+           <li><a class="dropdown-item" href="http://elearning.taiwantrade.com" target="_blank">數位貿易學苑</a></li>
+           <li><a class="dropdown-item"
+               href="https://info.taiwantrade.com/promotion/e vent#menu=11608#menu=11608"
+               target="_blank">電商研討會</a></li>
+           <li><a class="dropdown-item" href="https://events.taiwantrade.com/" target="_blank">活動資訊</a></li>
+         </ul>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link no_link" href="#">
+           電商輔導<i class="bi bi-caret-down"></i></i>
+         </a>
+         <ul class="down_menu">
+           <li><a class="dropdown-item" href="https://info.taiwantrade.com/index/ecplatf orm#menu=11612"
+               target="_blank">跨境電商上架</a></li>
+           <li><a class="dropdown-item" href="https://digitalcommerce.taiwantrade.com/ ai.html"
+               target="_blank">中小企業專案</a></li>
+           <li><a class="dropdown-item" href="https://events.taiwantrade.com/checkup" target="_blank">數位行銷健檢</a>
+           </li>
+           <li><a class="dropdown-item" href="">說明暨洽談會</a></li>
+           <li><a class="dropdown-item" href="https://info.taiwantrade.com/index/service _special#wa2"
+               target="_blank">商品認證檢測</a></li>
+           <li><a class="dropdown-item" href="https://info.taiwantrade.com/memberinde x/ttcampus"
+               target="_blank">電商實戰營</a></li>
+         </ul>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link no_link" href="#">
+           影音專區<i class="bi bi-caret-down"></i></i>
+         </a>
+         <ul class="down_menu">
+           <li><a class="dropdown-item" href="https://info.taiwantrade.com/video/#menu =11610"
+               target="_blank">影音最前線</a></li>
+           <li><a class="dropdown-item" href="youtube.html" target="_blank">Youtube</a>
+           </li>
+         </ul>
+       </li>
+       <li class="nav-item">
+        <a class="nav-link" href="https://www.taiwantrade.com/pages/2024intha.html" target="_blank">
+          2024泰國臺灣形象展
+        </a>
+      </li>
+
+     </ul>
+   </div>
+ </div>
+ <!-- 搜尋 -->
+ <button class="btn order-3 order-lg-3 topSearchBTN" type="button" data-bs-toggle="offcanvas" data-bs-target="#searchTop"
+     aria-controls="offcanvasTop"><i class="bi bi-search"></i>
+   </button>
 </div>
 
 
 <div class="offcanvas offcanvas-top" tabindex="-1" id="searchTop" aria-labelledby="offcanvasTopLabel">
-  <div class="offcanvas-header">
-    <h5 id="offcanvasTopLabel">全站搜尋</h5>
-    <button type="button" class="btn-close text-reset btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <form class="d-flex">
-      <input class="form-control" type="search" placeholder="請輸入關鍵字..." aria-label="Search">
-      <button class="btn search_btn" type="submit" id="searchClose">搜尋</button>
-    </form>
-  </div>
+<div class="offcanvas-header">
+ <h5 id="offcanvasTopLabel">全站搜尋</h5>
+ <button type="button" class="btn-close text-reset btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+</div>
+<div class="offcanvas-body">
+ <form class="d-flex">
+   <input class="form-control" type="search" placeholder="請輸入關鍵字..." aria-label="Search">
+   <button class="btn search_btn" type="submit" id="searchClose">搜尋</button>
+ </form>
+</div>
 </div>
 
 <script src='../assets/js/jquery-3.4.1.min.js'></script>
 <script src="../assets/js/jquery.sidr.min.js"></script>
 <script>
-  $(document).ready(function () {
-    // 預設sidr關閉
-    $.sidr('close', 'sidr');
+$(document).ready(function () {
+ // 預設sidr關閉
+ $.sidr('close', 'sidr');
 
-    // 開啟側邊欄
-    $('#menu-toggle').sidr({
-      name: 'sidr',      // 彈出物件ID
-      side: 'left',
-      speed: 200,
-      displace: false    // 不推擠
-    });
+ // 開啟側邊欄
+ $('#menu-toggle').sidr({
+   name: 'sidr',      // 彈出物件ID
+   side: 'left',
+   speed: 200,
+   displace: false    // 不推擠
+ });
 
-    $('#menu-toggle').on('click touchstart', function () {
-      $(this).toggleClass('active');
+ $('#menu-toggle').on('click touchstart', function () {
+   $(this).toggleClass('active');
 
-      $.sidr('toggle', 'sidr');
-    });
+   $.sidr('toggle', 'sidr');
+ });
 
 
 
-  });
+});
 
-  $(document).ready(function () {
-    $('.navBar_list .no_link').on('click', function (event) {
-      event.preventDefault(); 
-      $(this).toggleClass('rotate180');
-      $(this).siblings('.down_menu').toggle(200).addClass('downdown'); // 切換 .down_menu 的顯示
-    });
-  });
+$(document).ready(function () {
+ $('.navBar_list .no_link').on('click', function (event) {
+   event.preventDefault(); 
+   $(this).toggleClass('rotate180');
+   $(this).siblings('.down_menu').toggle(200).addClass('downdown'); // 切換 .down_menu 的顯示
+ });
+});
 
 </script>
-
