新增頁面與調整選單動畫

--- a/layout/header.html
+++ b/layout/header.html
@@ -58,16 +58,16 @@
            電商輔導<i class="bi bi-caret-down"></i></i>
          </a>
          <ul class="down_menu">
-           <li><a class="dropdown-item" href="https://info.taiwantrade.com/index/ecplatf orm#menu=11612"
+           <li><a class="dropdown-item" href="https://info.taiwantrade.com/index/ecplatform#menu=11612"
                target="_blank">跨境電商上架</a></li>
-           <li><a class="dropdown-item" href="https://digitalcommerce.taiwantrade.com/ ai.html"
+           <li><a class="dropdown-item" href="https://digitalcommerce.taiwantrade.com/ai.html"
                target="_blank">中小企業專案</a></li>
            <li><a class="dropdown-item" href="https://events.taiwantrade.com/checkup" target="_blank">數位行銷健檢</a>
            </li>
-           <li><a class="dropdown-item" href="">說明暨洽談會</a></li>
-           <li><a class="dropdown-item" href="https://info.taiwantrade.com/index/service _special#wa2"
+           <li><a class="dropdown-item" href="event.html">說明暨洽談會</a></li>
+           <li><a class="dropdown-item" href="https://info.taiwantrade.com/index/service_special#wa2"
                target="_blank">商品認證檢測</a></li>
-           <li><a class="dropdown-item" href="https://info.taiwantrade.com/memberinde x/ttcampus"
+           <li><a class="dropdown-item" href="https://info.taiwantrade.com/memberindex/ttcampus"
                target="_blank">電商實戰營</a></li>
          </ul>
        </li>
@@ -131,9 +131,6 @@ $(document).ready(function () {
 
    $.sidr('toggle', 'sidr');
  });
-
-
-
 });
 
 $(document).ready(function () {
