--- a/sass/erin/_layout.scss
+++ b/sass/erin/_layout.scss
@@ -438,6 +438,42 @@ header {
         }
     }
 
+    &#event{
+        border: 1px solid red;
+        li{
+            margin: 1em 0;
+            @include media-breakpoint-down(xl){
+                button{
+                    padding: .8em .5em;
+                }
+            }
+            @include media-breakpoint-down(lg){
+                margin: .5em 0;
+                button{
+                    font-size: 16px;
+                    padding: .8em .5em;
+                    margin: .1em;
+                }
+            }
+            @include media-breakpoint-down(md){
+                width: 33.3333%;
+                padding: 0 .5em;
+                button{
+                    width: 100%;
+                    font-size: 16px;
+                    padding: .8em .5em;
+                }
+            }
+            @include media-breakpoint-down(sm){
+                margin: .2em 0;
+                padding: 0 .2em;
+                button{
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+
 }
 
 
@@ -471,6 +507,40 @@ header {
         }
 
 
+    }
+    .eventList {
+        .event_title {
+            display: flex;
+            margin-bottom: 1em;
+
+            &::before {
+                content: "";
+                width: .5em;
+                height: 1.1em;
+                line-height: 24px;
+                background-color: $cyan;
+                display: inline-block;
+                vertical-align: middle;
+                margin-right: .3em;
+            }
+        }
+        &.event_aside{
+            padding-left: 10%;
+            
+            a{
+                display: block;
+                border: 1px solid $gray-100;
+                padding: 0;
+                margin-bottom: 1rem;
+                img{
+                    display: block;
+                }
+            }
+            @include media-breakpoint-down(lg){
+                    padding-left: 0;
+                    // border: 1px solid red
+            }
+        }
     }
 
     .articleTitle {
@@ -545,9 +615,11 @@ header {
 
                 .pic {
                     display: flex;
+                    flex-direction: column;
                     align-items: center;
-                    width: 70px;
-                    height: 70px;
+                    flex-wrap: wrap;
+                    max-width: 60px;
+                    max-height: 60px;
                     margin-right: 1rem;
                     border-radius: 50px;
                     border: 1px solid $gray-300;
@@ -556,6 +628,9 @@ header {
                         width: 100%;
                         border-radius: 50px;
                     }
+                }
+                .name{
+                    width: 100%;
                 }
             }
 
@@ -1042,6 +1117,11 @@ header {
             color: $primary;
             cursor: pointer;
         }
+        &.rotate180 {
+            i::before {
+                animation: rrroate .3s linear 1 forwards;
+            }
+        }
 
         // filter: brightness(1.2);
     }
@@ -1160,7 +1240,7 @@ header {
 
     .card-body {
         // align-items: center;
-        padding: 1.3em 1.8em;
+        padding: 1.3em 1em;
 
     }
 
@@ -1358,6 +1438,50 @@ header {
             .card-body {
                 border-top: 0;
             }
+        }
+    }
+    &.card_event {
+        // width: 30vw;
+        justify-content: center;
+        padding-left: 0;
+        padding-right: 0;
+        
+
+        .card-body {
+            border-top: 1px solid $white;
+            h5{
+                margin-bottom: 1em;
+                @include text-ellipsis (100%, 2);
+
+        }
+        .card-text{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        }
+
+        .card_img {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            height: fit-content;
+            overflow: hidden;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+
+        .btn {
+            width: auto;
+            // min-width: 8em;
+            font-size: 80%;
+            // margin-left: calc(50% - 4em);
+            text-align: center;
         }
     }
 
